--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+        "http://www.w3.org/TR/html4/loose.dtd">
+<html lang="en">
+<head>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8">
+	<title>blech.github.com</title>
+</head>
+<body>
 <h1>blech.github.com</h1>
 
 <p><em>a picture of a man digging a hole in the road</em></p>
+</body>
+</html>
