--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<title>blech.github.com</title>
+  <link rel="stylesheet" href="collected.css" type="text/css" media="all">
 </head>
 <body>
 <h1>blech.github.com</h1>
