--- a/index.html
+++ b/index.html
@@ -11,19 +11,8 @@
 
 <p><em>a picture of a man digging a hole in the road</em></p>
 
-<pre style="color:#999;">Instructions for setting up username.github.com/repo-name *
-Caution: make your working directory clean before you do this
-(either stash or commit), otherwise this will lose any changes 
-you've made to your project since the last commit.
-  cd /path/to/repo-name
-  git symbolic-ref HEAD refs/heads/gh-pages
-  rm .git/index
-  git clean -fdx
-  echo "My GitHub Page" > index.html
-  git add .
-  git commit -a -m "First pages commit"
-  git push origin gh-pages
-</pre>
-
+<ul>
+<li><a href="http://blech.github.io/wherewhatwhen/">where what when</a></li>
+</ul>
 </body>
 </html>
