Add timezone maps, blocks; fix site name

--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 <html lang="en">
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
-	<title>blech.github.com</title>
+	<title>blech.github.io</title>
   <link rel="stylesheet" href="collected.css" type="text/css" media="all">
 </head>
 <body>
-<h1>blech.github.com</h1>
+<h1>blech.github.io</h1>
 
-<p><em>a picture of a man digging a hole in the road</em></p>
+<p><em>a picture of a man digging a hole in the road (formerly blech.github.com)</em></p>
 
 <ul>
-<li><a href="http://blech.github.io/wherewhatwhen/">where what when</a></li>
+<li><a href="https://blech.github.io/wherewhatwhen/">where what when</a></li>
+<li><a href="https://blech.github.io/timezone-map/">timezone map</a></li>
 </ul>
+<ul>
+<li><a href="http://bl.ocks.org/blech/">bl.ocks.org/blech</a> (powered by <a href="https://gist.github.com/blech/">gist</a>)
 </body>
 </html>
