Fix scheme and typo

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <p><em>a picture of a man digging a hole in the road (formerly blech.github.com)</em></p>
 
 <ul>
-<li><a href="https://blech.github.io/wherewhatwhen/">where what when</a></li>
-<li><a href="https://blech.github.io/timezone-map/">timezone map</a></li>
+<li><a href="http://blech.github.io/wherewhatwhen/">where what when</a></li>
+<li><a href="http://blech.github.io/timezones-map/">timezone map</a></li>
 </ul>
 <ul>
 <li><a href="http://bl.ocks.org/blech/">bl.ocks.org/blech</a> (powered by <a href="https://gist.github.com/blech/">gist</a>)
